menu alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15382,7 +15382,8 @@ body.sal-disabled [data-sal|=flip] {
 
 .main-header {
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  justify-content: center;
   align-items: center;
 }
 .main-header .nav-main ul {
@@ -16226,7 +16227,8 @@ body.sal-disabled [data-sal|=flip] {
 }
 
 li.has-droupdown {
-  margin-right: 48px !important;
+  /* margin-right: 48px !important; */
+  margin-right: 37px !important;
 }
 
 @media only screen and (max-width: 575px) {
